# AOPnP_evaluation

./: README.md  Simple Stereo VO.md  ee.sh  eval.sh  evo.sh  evo_pts_asymtotical.sh
camera_models/: CMakeLists.txt
camera_models/src/: intrinsic_calib.cc
config/: vins_rviz_config.rviz
config/euroc/: euroc_stereo_config.yaml
vins_estimator/: CMakeLists.txt
vins_estimator/src/: KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/cpnp_solver/: CMakeLists.txt  cpnp.cpp  cpnp.h
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp
